--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main {
+   min-height: 80vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3 {
+   padding: 1rem 0;
+}
+
+h1 {
+   font-size: 1.8rem;
+   padding: 1rem 0;
+}
+
+h2 {
+   font-size: 1.4rem;
+   padding: 0.5rem 0;
+}
+
+.rating span {
+   margin: 0.1rem;
+}
+
+/* .photoProductInHomeScreen {
+  width: 271.52px;
+  height: 216.37px;
+} */
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+   display: flex;
+}
+.carousel-caption {
+   position: absolute;
+   top: 0;
+}
+
+.carousel-caption h2 {
+   color: #fff;
+}
+
+.carousel img {
+   height: 300px;
+   padding: 30px;
+   margin: 40px;
+   border-radius: 50%;
+   margin-left: auto;
+   margin-right: auto;
+}
+.carousel a {
+   margin: 0 auto;
+}
+@media (max-width: 900px) {
+   .carousel-caption h2 {
+      font-size: 2.5vw;
+   }
+}
+
+/*END carousel */
+
+@media (max-width: 900px) {
+   .headerClass {
+   }
+}
+
+.inputDesign {
+   border: 2px solid black;
+   border-radius: 10px;
+}
+
+.inputDesign::placeholder {
+   color: #696969;
+   opacity: 0.9;
+}
+
+#lblCartCount {
+   font-size: 12px;
+   background: #ff0000;
+   color: #fff;
+   padding: 0 5px;
+   vertical-align: top;
+   margin-left: -10px;
+}
+.badge {
+   padding-left: 9px;
+   padding-right: 9px;
+   -webkit-border-radius: 9px;
+   -moz-border-radius: 9px;
+   border-radius: 9px;
+}
+
+.label-warning[href],
+.badge-warning[href] {
+   background-color: #c67605;
+}
+
+.center {
+   display: flex;
+   flex-direction: center;
+   justify-content: center;
+   align-items: center;
 }
